packages/dt_for_itables/src/index.css
@import 'datatables.net-dt/css/dataTables.dataTables.min.css';
@import 'datatables.net-buttons-dt/css/buttons.dataTables.min.css';
@import 'datatables.net-columncontrol-dt/css/columnControl.dataTables.min.css';
@import 'datatables.net-fixedcolumns-dt/css/fixedColumns.dataTables.min.css';
@import 'datatables.net-fixedheader-dt/css/fixedHeader.dataTables.min.css';
@import 'datatables.net-keytable-dt/css/keyTable.dataTables.min.css';
@import 'datatables.net-rowgroup-dt/css/rowGroup.dataTables.min.css';
@import 'datatables.net-datetime/dist/dataTables.dateTime.min.css';
@import 'datatables.net-searchbuilder-dt/css/searchBuilder.dataTables.min.css';
@import 'datatables.net-searchpanes-dt/css/searchPanes.dataTables.min.css';
@import 'datatables.net-select-dt/css/select.dataTables.min.css';


div.dt-container {
    max-width: 100%;
}

div.dt-layout-table>div {
    overflow: auto;
    max-width: 100%;
}

.itables-dtype {
    font-weight: normal;
}

